@@ -28,6 +28,9 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Patch #1435422: zlib's compress and decompress objects now have a
+  copy() method.
+
 - On Win32, os.listdir now supports arbitrarily-long Unicode path names
   (up to the system limit of 32K characters).
 
